--- a/demoProject2/src/main/resources/templates/common/main.html
+++ b/demoProject2/src/main/resources/templates/common/main.html
@@ -61,10 +61,21 @@
         <li>
             <a href="/example/ex4">타임리프 예제4</a>
         </li>
-
-
       </ol>
 
+      <hr>
+      <h3>fragments/temp.html 중 temp1 조각 추가하기</h3>
+
+      <!-- controller에서 forward시
+        타임리프가 제공하는 접두사, 접미사를 제외한 경로를 작성
+      -->
+      <th:block th:replace="~{fragments/temp :: temp1}" ></th:block>
+      <th:block th:replace="~{fragments/temp :: temp2}" ></th:block>
+
+
+      <li>
+        <a href="/example/ex5">타임리프 예제5</a>
+      </li>
 
 
 
@@ -77,7 +88,9 @@
 
 
 
-
+      <!-- html 파일 전체를 하나의 조각으로 취급 -->
+  <!-- html 파일 전체를 하나의 조각으로 취급 -->
+  <!-- <th:block th:replace="~{fragments/footer}"></th:block> -->
 
 </body>
 </html>
