--- a/todoList-boot/src/main/resources/templates/ajax/main.html
+++ b/todoList-boot/src/main/resources/templates/ajax/main.html
@@ -3,33 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TodoList - Boot</title>
+    <title>TodoList - Ajax</title>
 </head>
 <body>
-    <h1>Todo List</h1>
-    <hr>
-    <h3><a href="/ajax/main">TodoList - Ajax 버전</a></h3>
+    <h1>Todo List - Ajax 버전</h1>
 
     <hr>
 
-
-    <form action="/todo/add" method="POST">
+    <!-- form 태그 제출은 무조건 동기식! =>  div로 변경 -->
+    <div>
         <h4>할 일 추가</h4>
 
-        <div>
-            제목 : <input type="text" name="todoTitle">
-        </div>
+        <div>제목 : <input type="text" id="todoTitle"></div>
 
-        <div>
-            <textarea name="todoContent" cols="50" rows="5" placeholder="상세 내용"></textarea>
-        </div>
+        <div><textarea id="todoContent" cols="50" rows="5" placeholder="상세 내용"></textarea></div>
 
-        <button>추가하기</button>
-    </form>
+        <button id="addBtn">추가하기</button>
+    </div>
 
     <hr>   
   <!-- ${#lists.size(todoList)} == ${todoList.size()} -->
-    <h3 th:text="|전체 Todo 개수 : ${#lists.size(todoList)} 개 / 완료된 Todo 개수 : ${completeCount}|"></h3>
+    <!-- <h3 th:text="|전체 Todo 개수 : ${#lists.size(todoList)} 개 / 완료된 Todo 개수 : ${completeCount}|"></h3> -->
+
+    <h3 id="todoHeader">
+        전체 Todo 개수 : <span id="totalCount">0</span>개 /
+        완료된 Todo 개수 : <span id="completeCount">0</span>개
+        <button id="reloadBtn">새로고침</button>
+    </h3>
+    
 
     <table border="1" style="border-collapse:collapse;">
         <thead>
@@ -40,12 +41,7 @@
         </thead>
 
         <tbody>
-                <tr th:each="todo : ${todoList}" th:object="${todo}">
-                    <td th:text="*{todoNo}">할 일 번호</td>
-                    <td><a th:href="@{/todo/detail(todoNo=*{todoNo})}" th:text="*{todoTitle}">할 일 제목</a></td>
-                    <td th:text="*{complete}">완료 여부</td>
-                    <td th:text="*{regDate}">등록일</td>
-                </tr>
+
         </tbody>
 
     <!-- 타임리프 값을 JS 자료형에 맞게 변환 -->
@@ -61,6 +57,8 @@
 
     <!-- footer.html 조각을 해당 위치에 추가 (조각의 경로는 forward 하듯 작성 <- 접두사 접미사 생략) -->
     <th:block th:replace="~{common/footer}"></th:block>
+
+    <script src="/js/ajax-main.js"></script>
 
 </body>
 </html>
