--- a/todoList-boot/src/main/resources/templates/ajax/main.html
+++ b/todoList-boot/src/main/resources/templates/ajax/main.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TodoList - Ajax</title>
+
+    <link rel="stylesheet" href="/css/ajax-main.css">
 </head>
 <body>
     <h1>Todo List - Ajax 버전</h1>
@@ -40,9 +42,69 @@
             <th>등록 날짜</th>
         </thead>
 
-        <tbody>
+        <tbody id="tbody">
 
         </tbody>
+    </table>
+
+    <!-- 할 일 상세 조회시 출력되는 화면
+    
+        - popup layer : 현재 페이지 위에 새로운 레이어를 띄우는것
+    
+    -->
+    <div class="popup-hidden" id="popupLayer">
+        
+        <div class="popup-row">
+            번호 <span id="popupTodoNo"></span>
+            |
+            제목 <span id="popupTodoTitle"></span>
+
+            <span id="popupClose">&timesb;</span>
+        </div>
+
+        <div class="popup-row">
+           완료 여부 <span id="popupComplete"></span>
+           |
+           등록일 <span id="popupRegDate"></span>
+        </div>
+
+        <div class="popup-row">
+            [내용]
+            <div id="popupTodoContent"></div>
+
+        </div>
+
+        <div class="btn-container">
+            <button id="completeBtn">완료 여부 변경</button>
+            <button id="updateView">수정</button>
+            <button id="deleteBtn">삭제</button>
+        </div>
+    </div>
+
+    <!-- 수정 팝업 레이어 (히든) -->
+    <div id="updateLayer" class="popup-hidden">
+
+        <div class="popup-row">
+            제목 <input type="text" id="updateTitle">
+        </div>
+
+        <div class="popup-row">
+            <textarea name="" id="updateContent" cols="40" rows="5"></textarea>
+        </div>
+        
+        <div class="btn-container">
+            <button id="updateBtn">수정</button>
+            <button id="updateCancel">취소</button>
+
+        </div>
+    </div>
+
+
+
+
+
+
+
 
     <!-- 타임리프 값을 JS 자료형에 맞게 변환 -->
 <!--
