--- a/boardProject/src/main/resources/templates/member/signup.html
+++ b/boardProject/src/main/resources/templates/member/signup.html
@@ -94,17 +94,17 @@
                 <label for="memberAddress">주소</label>
       
                 <div class="signUp-input-area">
-                    <input type="text" name="memberAddress" placeholder="우편번호" maxlength="6" id="sample6_postcode">                       
+                    <input type="text" name="memberAddress" placeholder="우편번호" maxlength="6" id="postcode">                       
                     
-                    <button type="button" onclick="sample6_execDaumPostcode()">검색</button>
+                    <button type="button" id="searchAddress">검색</button>
                 </div>
       
                 <div class="signUp-input-area">
-                    <input type="text" name="memberAddress" placeholder="도로명/지번 주소" id="sample6_address">
+                    <input type="text" name="memberAddress" placeholder="도로명/지번 주소" id="address">
                 </div>
       
                 <div class="signUp-input-area">
-                    <input type="text" name="memberAddress" placeholder="상세 주소" id="sample6_detailAddress">
+                    <input type="text" name="memberAddress" placeholder="상세 주소" id="detailAddress">
                 </div>
       
       
@@ -123,8 +123,17 @@
 
 
 
-
     <!-- templetes/common/footer.html  조각 추가 -->
     <th:block th:replace="~{common/footer}"></th:block>
+
+    <!-- script 태그가 여러개가 나뉘어 있어도 HTML 랜더링시 큰 한장의 JS 파일로 변환
+        (단, 윗쪽 스트립트에서 해석 안된 아랫쪽 스크립트는 호출 불가)
+    -->
+
+    <!-- 다음 주소 API 추가 -->
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+
+    <!-- 회원가입 JS 추가 -->
+    <script src="/js/member/signup.js"></script>
 </body>
 </html>
