--- a/boardProject/src/main/resources/templates/common/main.html
+++ b/boardProject/src/main/resources/templates/common/main.html
@@ -26,6 +26,26 @@
 
                 <hr>
 
+                <h3>특정 회원 비밀번호 초기화(Ajax)</h3>
+
+                <div>
+                    회원번호 : <input type="text" id="resetMemberNo">
+                    <button id="resetPw">비밀번호 초기화(pass01!)</button>
+                  </div>
+                <hr>
+
+                <h3>특정 회원 탈퇴 복구(Ajax)</h3>
+                회원번호 : <input type="text" id="restorationMemberNo">
+                <button id="restorationBtn">탈퇴 복구</button>
+
+                <hr>
+
+                <h3>특정 회원 삭제(Ajax)</h3>
+                회원번호 : <input type="text" id="deleteMember">
+                <button id="deleteMemBtn">회원 삭제</button>
+
+                <hr>
+                
                 <h3>
                     회원 목록 조회(비동기)
                     <button id="selectMemberList">조회</button>
