--- a/boardProject/src/main/resources/templates/myPage/myPage-changePw.html
+++ b/boardProject/src/main/resources/templates/myPage/myPage-changePw.html
@@ -52,5 +52,7 @@
 
     <!-- 푸터 추가 -->
     <th:block th:replace="~{common/footer}"></th:block>
+
+    <script src="/js/myPage/myPage.js"></script>
 </body>
 </html>
