--- a/boardProject/src/main/resources/templates/myPage/myPage-fileTest.html
+++ b/boardProject/src/main/resources/templates/myPage/myPage-fileTest.html
@@ -34,19 +34,58 @@
                         ㄴ text/plain : 텍스트로 서버에 제출
                 </pre>
 
-                <!-- 변경 폼 -->
+                <!-- 변경 폼 -->        <!-- 파일 업로드시 form의 메소드는 반드시 POST! -->
                 <form action="/myPage/file/test1" method="POST" name="myPageFrm" enctype="multipart/form-data">
                    
                     <h3>업로드 테스트 1</h3>
                     
                     <!-- type="file"도 결국에는 Parameter -> @RequestParam으로 처리 가능 -->
                     <input type="file" name="uploadFile">
-                    
                     <button class="myPage-submit">제출하기</button>
                     
                     <!-- a태그의 다운로드 속성 : href 속성에 작성된 요청에 대한 응답을 다운로드 -->
                     <a th:if="${path != null}" th:text="${path}" th:href="${path}" download> 업로드한 파일</a>
+
                 </form>
+
+                
+
+                <hr>
+
+                <!--  -->
+                <form action="/myPage/file/test2" method="POST" enctype="multipart/form-data">
+                    <h3>파일 업로드 + DB 저장 + 조회</h3>
+                    <input type="file" name="uploadFile">
+                    <button class="myPage-submit">제출하기</button>
+
+
+                </form>
+
+
+                <form action="/myPage/file/test3"
+                method="POST" enctype="multipart/form-data" >
+      
+                <h3>여러 파일 업로드</h3>
+      
+                <pre>
+                  1) 같은 name 속성을 가지는 type="file" 
+                     요소를 여러 개 작성
+      
+                  2) multiple 속성 이용
+                </pre>
+
+                <div>
+                    <input type="file" name="aaa"><br>
+                    <input type="file" name="aaa">    
+                </div>
+                <hr>
+                <div>
+                    2번) multiple 사용
+                    <input type="file" name="bbb" multiple>
+                </div>
+                <button class="myPage-submit">제출하기</button>
+              </form>
+
             </section>
         </section>
     </main>
