--- a/boardProject/src/main/resources/templates/myPage/sideMenu.html
+++ b/boardProject/src/main/resources/templates/myPage/sideMenu.html
@@ -18,10 +18,12 @@
 
         <li>
             <a href="/myPage/secession">회원 탈퇴</a>
-        </li
-        >
+        </li>
         <li>
             <a href="/myPage/fileTest">파일 테스트</a>
+        </li>
+        <li>
+            <a href="/myPage/fileList">업로드 파일 목록</a>
         </li>
 
     </ul>
