--- a/BookManagement/src/main/resources/templates/regist.html
+++ b/BookManagement/src/main/resources/templates/regist.html
@@ -42,6 +42,11 @@
             </section>
     </section>
     </main>
-    <script src="/js/main.js"></script>
+    
+    <script th:inline="javascript">
+        const message =  /*[[${message}]]*/ "전달 받은 message";
+      
+        if(message != null) alert(message);
+    </script>
 </body>
 </html>
