--- a/boardProject/src/main/resources/templates/common/header.html
+++ b/boardProject/src/main/resources/templates/common/header.html
@@ -58,10 +58,14 @@
 </header>
 
 <!-- navigator -->
-<nav>
+<!-- 어떤 주소로 요청이 들어와도 요청을 interceptor에서 가로채서 DB에 있는 게시판의 종류를 뿌려줌  -->
+<nav><!--  th:each="하나씩 : 리스트" -->
     <ul>
-        <li><a href="#">공지사항</a></li>
-        <li><a href="#">자유 게시판</a></li>
-        <li><a href="#">질문 게시판</a></li>
+        <th:block th:each="boardType : ${application.boardTypeList}"> <!-- application : application scope -->
+            <li><!--           /board/     2  <- boardCode =       2               -->
+                <a th:href="@{/board/{boardCode}( boardCode = ${boardType.boardCode} )}" th:text="${boardType.boardName}">게시판이름</a>
+            </li>
+
+        </th:block>
     </ul>
 </nav>
