--- a/boardProject/src/main/resources/templates/board/boardDetail.html
+++ b/boardProject/src/main/resources/templates/board/boardDetail.html
@@ -40,9 +40,10 @@
          
                     <!-- 좋아요 하트 -->
                     <span class="like-area">
-                                   <!-- 비동기로 좋아요 누를때 동작 (4/22 월 예정) -->
+                        
                         <!-- 좋아요 누른적이 있으면 fa-solid, 없으면 fa-regular 클래스 추가 -->
-                        <i class="fa-heart fa-regular" id="boardLike"></i>
+                        <i class="fa-heart" id="boardLike"
+                           th:classappend="*{likeCheck == 1} ? fa-solid : fa-regular"></i>
 
                         <!-- 좋아요 개수 -->
                         <span th:text="*{likeCount}">0</span>
@@ -129,7 +130,19 @@
 
     <th:block th:replace="~{common/footer}"></th:block>
 
+    <script th:inline="javascript">
 
+       /* 로그인 상태인 경우 로그인한 회원 번호를 전역변수에 저장 */
+        const loginMemberNo = /*[[${session.loginMember?.memberNo}]]*/ "로그인 회원 번호"; 
+//          ㄴ session에서 loginMember를 얻어왔을떄 null이 아닌 경우(?) 회원번호(memberNo) 얻어오기 (loginMember가 null인 경우 [null] 반환)
+
+        /* 현재 게시글번호 전역변수로 저장 */ // Model에 담아 보낸 보드 객체에서 boardNo만 꺼내서 전역변수로 저장
+        const boardNo = /*[[${board.boardNo}]]*/ "게시글 번호";
+
+        /* 현재 게시글 좋아요 여부(boardLike)를 전역 변수로 저장 */
+        let likeCheck = /*[[${board.likeCheck}]]*/ "좋아요 여부"; // 주석과 th 사이에 공백 있으면 오류, 클릭될떄마다 값이 바뀌기떄문ㄴ
+    </script>
+    
     <script src="/js/board/boardDetail.js"></script>
     <script src="/js/board/comment.js"></script>
     
