--- a/boardProject/src/main/resources/templates/myPage/myPage-fileTest.html
+++ b/boardProject/src/main/resources/templates/myPage/myPage-fileTest.html
@@ -62,8 +62,7 @@
                 </form>
 
 
-                <form action="/myPage/file/test3"
-                method="POST" enctype="multipart/form-data" >
+                <form action="/myPage/file/test3" method="POST" enctype="multipart/form-data" >
       
                 <h3>여러 파일 업로드</h3>
       
