--- a/boardProject/src/main/resources/templates/board/comment.html
+++ b/boardProject/src/main/resources/templates/board/comment.html
@@ -4,38 +4,46 @@
         
         <ul id="commentList">
 
-            <!-- 대댓글인 경우 child-comment 클래스 추가 -->
-            <li class="comment-row" th:classappend="${comment.parentCommentNo} != 0 ? child-comment" th:each="comment : ${board.commentList}" th:object="${comment}">
-                <p class="comment-writer">
-                    <!-- 프로필 이미지 없을 경우 -->
-                    <img th:unless="*{profileImg}" th:src="#{user.default.image}">
-                    <!-- 프로필 이미지 있을 경우 -->
-                    <img th:if="*{profileImg}" th:src="*{profileImg}">
+            <!-- 대댓글인 경우 child-comment 클래스 추가 (parentCommentNo값이 0인경우 : 최상위부모덧글) --> 
+            <li class="comment-row" th:classappend="${comment.parentCommentNo} != 0 ? child-comment" 
+                th:each="comment : ${board.commentList}" th:object="${comment}">
 
-                    <span th:text="*{memberNickname}">닉네임</span>
-                    <span class="comment-date" th:text="*{commentWriteDate}">작성일</span>
-                </p>
+                <th:block th:if="*{commentDelFl} == 'Y'">
+                    삭제된 댓글입니다.
+                </th:block>
 
-                <p class="comment-content" th:text="*{commentContent}">댓글 내용</p>
+                <th:block th:if="*{commentDelFl} == 'N'">
 
-                <!-- 버튼 영역 -->
-                <div class="comment-btn-area">
-                    <button th:onclick="|showInsertComment(*{commentNo}, this)|">답글</button>   
-                        
-                    
-                    <th:block th:if="${session.loginMember != null and session.loginMember.memberNo == comment.memberNo}">
-                        <button th:onclick="|showUpdateComment(*{commentNo}, this)|">수정</button>     
-                        <button th:onclick="|deleteComment(*{commentNo})|">삭제</button>
-                    </th:block>
+                    <!-- 작성자 정보 -->
+                    <p class="comment-writer">
+                        <!-- 프로필 이미지 없을 경우 -->
+                        <img th:unless="*{profileImg}" th:src="#{user.default.image}">
+                        <!-- 프로필 이미지 있을 경우 -->
+                        <img th:if="*{profileImg}" th:src="*{profileImg}">
+                        <span th:text="*{memberNickname}">닉네임</span>
+                        <span class="comment-date" th:text="*{commentWriteDate}">작성일</span>
+                    </p>
 
-                    <!-- 로그인 회원과 댓글 작성자가 같은 경우 -->  
-                    
-                </div>
+                    <!-- 댓글 내용 -->
+                    <p class="comment-content" th:text="*{commentContent}">댓글 내용</p>
+    
+                    <!-- 버튼 영역 -->
+                    <div class="comment-btn-area">
 
+                        <button th:onclick="|showInsertComment(*{commentNo}, this)|">답글</button>   
+    
+                        <!-- 로그인 회원, 댓글 작성자가 같은 경우 수정/삭제 버튼이 보이게 설정 -->    
+                        <th:block th:if="${session.loginMember != null and session.loginMember.memberNo == comment.memberNo}">
+                            <button th:onclick="|showUpdateComment(*{commentNo}, this)|">수정</button>     
+                            <button th:onclick="|deleteComment(*{commentNo})|">삭제</button>
+                        </th:block>
+                    </div>
+                </th:block>
+                
             </li>
-            
         </ul>
     </div>
+                
     
 
     <!-- 댓글 작성 부분 -->
