--- a/boardProject/src/main/resources/templates/common/header.html
+++ b/boardProject/src/main/resources/templates/common/header.html
@@ -49,7 +49,7 @@
             <input type="checkbox" id="headerMenuToggle">
 
             <div class="header-menu">
-                <a href="/myPage/myPage-profile">내정보</a>
+                <a href="/myPage/info">내정보</a>
                 <a href="/member/logout">로그아웃</a>
             </div>
         </th:block>
