--- a/pawLife/src/main/resources/templates/common/header.html
+++ b/pawLife/src/main/resources/templates/common/header.html
@@ -2,7 +2,9 @@
 
     <!-- 로그인, 회원가입 -->
     <section class="header-top-menu">
-        <div><a href="#">로그인</a>|<a href="#">회원가입</a></div>
+        <div>
+            <a href="/member/login">로그인</a>|<a href="/member/signup">회원가입</a>
+        </div>
     </section>
 
     <!-- 로고(사진, 글) -->
@@ -15,8 +17,8 @@
     <section>
         <nav>
             <ul>
-                <li><a href="#">홈</a></li>
-                <li><a href="#">입양</a></li>
+                <li><a href="/">홈</a></li>
+                <li><a href="/adoption/adoptionList">입양</a></li>
                 <li><a href="#">후기</a></li>
                 <li><a href="#">마이페이지</a></li>
             </ul>
