--- a/pawLife/src/main/resources/templates/common/footer.html
+++ b/pawLife/src/main/resources/templates/common/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <p>Copyright &copy; KH Information Educational Institute A-Class</p>
+    <p>Copyright &copy; PAWLIFE</p>
   
     <article>
         <a href="#">프로젝트 소개</a>    
@@ -10,7 +10,7 @@
         <span>|</span>
         <a href="#">고객센터</a>    
     </article>
-  </footer>
+</footer>
   
   
   <!-- <script th:inline="javascript">
