--- a/pawLife/src/main/resources/templates/common/main.html
+++ b/pawLife/src/main/resources/templates/common/main.html
@@ -15,46 +15,43 @@
       <!-- templetes/common/header.html  조각 추가 -->
       <th:block th:replace="~{common/header}"></th:block>
       
-      <!-- 캐러셀 (우선 영역만 지정, 추후 추가 예정) -->
-      <div class="carousel"></div>
 
-      <!-- 캐러셀 배너 -->
-      <!-- <div class="slideshow-container"> -->
+      <div class="slideshow-container">
 
-         <!-- Full-width images with number and caption text -->
-         <!-- <div class="mySlides fade">
-            <div class="numbertext">1 / 3</div>
-            <img src="/images/flower1.jpg" style="width:100%">
-            <div class="text">첫번째 배너</div>
-         </div>
-      
          <div class="mySlides fade">
-            <div class="numbertext">2 / 3</div>
-            <img src="/images/flower2.jpg" style="width:100%">
-            <div class="text">두번째 배너</div>
+           <img src="/images/dog1.jpg">
          </div>
-      
+         
          <div class="mySlides fade">
-            <div class="numbertext">3 / 3</div>
-            <img src="/images/flower3.jpg" style="width:100%">
-            <div class="text">세번째 배너</div>
+           <img src="/images/dog2.jpg">
          </div>
-      </div>    -->
+         <div class="mySlides fade">
+           <img src="/images/dog3.jpg">
+         </div>
+      </div>
+         
+      <div style="text-align:center">
+         <span class="dot"></span> 
+         <span class="dot"></span> 
+         <span class="dot"></span> 
+         
+      </div>
+
+
+   
 
 
       <!-- 레이아웃용 빈공간 -->
       <section class="content1">
          <h2>Pawlife에서 새로운 가족을 찾아보세요!</h2>
       </section>
-         
-
 
       <!-- 게시판 영역 -->
       <section class="content2">
       
          <!-- 입양 게시판 -->
          <div class="card-container">
-            <a href="#">입양 게시판<i class="fa-solid fa-chevron-right"></i></a>
+            <a href="/adoption/adoptionList">입양 게시판<i class="fa-solid fa-chevron-right"></i></a>
 
             <div class="card-row">
                <!-- 1,2,3,4 -->
@@ -99,7 +96,7 @@
 
          <!-- 후기 게시판 -->
          <div class="card-container">
-            <a href="#">입양 후기 게시판<i class="fa-solid fa-chevron-right"></i></a>
+            <a href="/review/reviewList">입양 후기 게시판<i class="fa-solid fa-chevron-right"></i></a>
 
             <div class="card-row">
                <div class="card">
@@ -121,23 +118,24 @@
                </div>
             </div>
 
-         <div class="card-row">
-            <div class="card">
-               <img class="card-img" src="/images/dog1.jpg" alt="게시판 썸네일 이미지">
-               <a href="#" class="card-title">예쁜 강아지</a>
-            </div>
-            <!--  -->
-            <div class="card">
-               <img class="card-img" src="/images/dog2.jpg" alt="게시판 썸네일 이미지">
-               <a href="#" class="card-title">귀여운 강아지</a>
-            </div>
-            <div class="card">
-               <img class="card-img" src="/images/dog3.jpg" alt="게시판 썸네일 이미지">
-               <a href="#" class="card-title">졸린 강아지</a>
-            </div>
-            <div class="card">
-               <img class="card-img" src="/images/dog4.jpg" alt="게시판 썸네일 이미지">
-               <a href="#" class="card-title">집 가고싶은 강아지</a>
+            <div class="card-row">
+               <div class="card">
+                  <img class="card-img" src="/images/dog1.jpg" alt="게시판 썸네일 이미지">
+                  <a href="#" class="card-title">예쁜 강아지</a>
+               </div>
+               <!--  -->
+               <div class="card">
+                  <img class="card-img" src="/images/dog2.jpg" alt="게시판 썸네일 이미지">
+                  <a href="#" class="card-title">귀여운 강아지</a>
+               </div>
+               <div class="card">
+                  <img class="card-img" src="/images/dog3.jpg" alt="게시판 썸네일 이미지">
+                  <a href="#" class="card-title">졸린 강아지</a>
+               </div>
+               <div class="card">
+                  <img class="card-img" src="/images/dog4.jpg" alt="게시판 썸네일 이미지">
+                  <a href="#" class="card-title">집 가고싶은 강아지</a>
+               </div>
             </div>
          </div>
       </section>
@@ -151,6 +149,8 @@
 
    <!-- templetes/common/footer.html  조각 추가 -->
    <th:block th:replace="~{common/footer}"></th:block> 
+
+   <script src="/js/main.js"></script>
 
 </body>
 </html>
