--- a/pawLife/src/main/resources/templates/common/common.html
+++ b/pawLife/src/main/resources/templates/common/common.html
@@ -4,7 +4,7 @@
 <!-- font awesome 라이브라리 추가 + key 등록 -->
 <script src="https://kit.fontawesome.com/8affe1c744.js" crossorigin="anonymous"></script>
 
-<script src="/js/header.js"></script>
+<!-- <script src="/js/main.js"></script> -->
 
 
 
