--- a/pawLife/src/main/resources/templates/common/main.html
+++ b/pawLife/src/main/resources/templates/common/main.html
@@ -37,13 +37,10 @@
          
       </div>
 
-
-   
-
-
-      <!-- 레이아웃용 빈공간 -->
+      <!-- 레이아웃용 빈공간, 빠른 도구 영역 -->
       <section class="content1">
          <h2>Pawlife에서 새로운 가족을 찾아보세요!</h2>
+         <a href="/adoption/adoptionContact">문의하기</a>
       </section>
 
       <!-- 게시판 영역 -->
