--- a/pawLife/src/main/resources/templates/myPage/myPage-first.html
+++ b/pawLife/src/main/resources/templates/myPage/myPage-first.html
@@ -296,6 +296,6 @@
     <!-- 푸터 추가 -->
     <th:block th:replace="~{common/footer}"></th:block>
 
-    <!-- <script src="/js/myPage/myPage.js"></script>s -->
+    <script src="/js/myPage/myPage.js"></script>
 </body>
 </html>
