--- a/pawLife/src/main/resources/static/css/adoption/adoption-list.css
+++ b/pawLife/src/main/resources/static/css/adoption/adoption-list.css
@@ -59,6 +59,7 @@ main{
     display: flex;
     justify-content: space-around;
     margin: 10px;
+    
  }
  .card{
     width: 100%;
@@ -67,6 +68,7 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
  }
  .card>img{
     width: 70%;
@@ -83,6 +85,12 @@ main{
     transition: 0.3s;
  }
  
+ .link{
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom:0;
+    z-index: 2;
+    width: 100%;
+ }
  
 
 /* 검색 */
