--- a/pawLife/src/main/resources/static/css/adoption/adoption-write.css
+++ b/pawLife/src/main/resources/static/css/adoption/adoption-write.css
@@ -24,46 +24,22 @@ body{
     min-height: 100vh;      /* 최소 높이를 화면 비율 100% */
  }
 
-/* ********************************************************************* */
-
-/* 인포바(프로필, 닉네임 북마크바) */
-.info-bar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-right: 0;
-}
-
-.info{
-    display: flex;
-    align-items: center;
-    padding: 20px;
-}
-/* 프로필 이미지 */
-#profile{
-    width: 30px;
-    height: 30px;
-    border-radius: 50px;
-    margin-right: 5px;
-}
-.bookmark{
-    display: flex;
-    justify-content: end;
-    
-    cursor: pointer;
-}
-
-.view-count{
-    margin-bottom: 5px;
-}
-
-.right-bar{
-    justify-content: end;
-    flex-direction: row;
-}
-
 
 /* ***************************************************************** */
+
+/* 제목 */
+#inputTitle{
+    outline: none;
+    border:none;
+    border-bottom: 1px solid gray;
+    margin: 20px 0;
+    padding: 10px 5px;
+    font-size: 18px;
+    font-weight: bold;
+    width: 100%;
+}
+
+
 .board{
     max-width: 800px;
     margin: auto;
@@ -87,14 +63,50 @@ body{
     flex-direction: column;
 }
 
-/* 이미지 */
+/* 이미지 인풋*/
 .adoption-img{
-    width: 250px;
-    height: 350px;
-    border:1px solid gray
+    display: none;
 }
 
-/* 문의하기 버튼 */
+.info-img{
+    width: 250px;
+    height: 350px;
+    display: inline-block;
+    text-align: center;
+    position: relative;
+    margin-right: 20px;
+}
+
+.info-img > label{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border:1px solid gray;
+    cursor: pointer;
+}
+
+/* 정보값 인풋 */
+.infomation>input{
+    outline: none;
+    border:none;
+    border-bottom: 1px solid gray;
+    margin: 20px 0;
+    padding: 10px 5px;
+    font-size: 1.1em;
+   }
+
+/* 삭제 버튼 */
+.delete-image{
+    position: absolute;
+    top: 0;
+    right: 7px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+/* 글쓰기 버튼 */
 #writeBtn{
     width: 300px;
     height: 40px;
@@ -109,17 +121,13 @@ body{
     cursor: pointer;
 }
 
-/* 목록으로 버튼 */
-#listBtn{
-    border: 1px solid gray;
-    background-color: #fff;
-    width: 100px;
-    height: 40px;
-    color: gray;
-    margin-bottom: 100px;
-    cursor: pointer;
+/* 에디터 */
+
+textarea{
+    width: 100%;
+    height: 500px;
+    font-size: 16px;
+    padding: 10px;
 }
 
-#listBtn:hover{
-    background-color: #ddd;
-}
+
