--- a/pawLife/src/main/resources/templates/adoption/adoptionList.html
+++ b/pawLife/src/main/resources/templates/adoption/adoptionList.html
@@ -20,41 +20,49 @@
 
             <div class="card-row">
                <!-- 1,2,3,4 -->
-                <label for="card" class="card">
-                    <img class="card-img" src="/images/dog1.jpg" alt="게시판 썸네일 이미지">
-                    <a href="/adoption/adoptionDetail" class="card-title" id="card">예쁜 강아지</a>
-                </label>
+               <div class="card">
+                    <a href="/adoption/adoptionDetail" class="link"></a>
+                    <img class="card-img" src="/images/dog1.jpg" alt="게시판 썸네일 이미지" id="card">
+                    <span class="card-title">예쁜 강아지</span>
+               </div>
                <!--  -->
                <div class="card">
+                  <a href="/adoption/adoptionDetail" class="link"></a>
                   <img class="card-img" src="/images/dog2.jpg" alt="게시판 썸네일 이미지">
-                  <a href="#" class="card-title">귀여운 강아지</a>
+                  <span class="card-title">예쁜 강아지</span>
                </div>
                <div class="card">
+                  <a href="/adoption/adoptionDetail" class="link"></a>
                   <img class="card-img" src="/images/dog3.jpg" alt="게시판 썸네일 이미지">
-                  <a href="#" class="card-title">졸린 강아지</a>
+                  <span class="card-title">예쁜 강아지</span>
                </div>
                <div class="card">
+                  <a href="/adoption/adoptionDetail" class="link"></a>
                   <img class="card-img" src="/images/dog1.jpg" alt="게시판 썸네일 이미지">
-                  <a href="#" class="card-title">집 가고싶은 강아지</a>
+                  <span class="card-title">예쁜 강아지</span>
                </div>
             </div>
 
             <div class="card-row">
                <div class="card">
+                  <a href="/adoption/adoptionDetail" class="link"></a>
                   <img class="card-img" src="/images/cat1.jpg" alt="게시판 썸네일 이미지">
-                  <a href="#" class="card-title">예쁜 고양이</a>
+                  <span class="card-title">예쁜 강아지</span>
                </div>
                <div class="card">
+                  <a href="/adoption/adoptionDetail" class="link"></a>
                   <img class="card-img" src="/images/cat2.jpg" alt="게시판 썸네일 이미지">
-                  <a href="#" class="card-title">귀여운 고양이</a>
+                  <span class="card-title">예쁜 강아지</span>
                </div>
                <div class="card">
+                  <a href="/adoption/adoptionDetail" class="link"></a>
                   <img class="card-img" src="/images/cat3.jpg" alt="게시판 썸네일 이미지">
-                  <a href="#" class="card-title">누워있는 고양이</a>
+                  <span class="card-title">예쁜 강아지</span>
                </div>
                <div class="card">
+                    <a href="/adoption/adoptionDetail" class="link"></a>
                   <img class="card-img" src="/images/cat1.jpg" alt="게시판 썸네일 이미지">
-                  <a href="#" class="card-title">집 가고싶은 고양이</a>
+                  <span class="card-title">예쁜 강아지</span>
                </div>
             </div>
          </div>
