--- a/pawLife/src/main/resources/templates/review/reviewList.html
+++ b/pawLife/src/main/resources/templates/review/reviewList.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>후기 페이지</title>
     <th:block th:replace="~{common/common}"></th:block>
-    <link rel="stylesheet" href="/css/adoption/adoption-list.css">
+    <link rel="stylesheet" href="/css/review/review-list.css">
 
 </head>
 <body>
@@ -21,40 +21,48 @@
             <div class="card-row">
                <!-- 1,2,3,4 -->
                <div class="card">
-                  <img class="card-img" src="/images/dog1.jpg" alt="게시판 썸네일 이미지">
-                  <a href="#" class="card-title">예쁜 강아지</a>
+                    <a href="/review/reviewDetail" class="link"></a>
+                    <img class="card-img" src="/images/dog1.jpg" alt="게시판 썸네일 이미지" id="card">
+                    <span class="card-title">예쁜 강아지</span>
                </div>
                <!--  -->
                <div class="card">
+                  <a href="#" class="link"></a>
                   <img class="card-img" src="/images/dog2.jpg" alt="게시판 썸네일 이미지">
-                  <a href="#" class="card-title">귀여운 강아지</a>
+                  <span class="card-title">예쁜 강아지</span>
                </div>
                <div class="card">
+                  <a href="#" class="link"></a>
                   <img class="card-img" src="/images/dog3.jpg" alt="게시판 썸네일 이미지">
-                  <a href="#" class="card-title">졸린 강아지</a>
+                  <span class="card-title">예쁜 강아지</span>
                </div>
                <div class="card">
+                  <a href="#" class="link"></a>
                   <img class="card-img" src="/images/dog1.jpg" alt="게시판 썸네일 이미지">
-                  <a href="#" class="card-title">집 가고싶은 강아지</a>
+                  <span class="card-title">예쁜 강아지</span>
                </div>
             </div>
 
             <div class="card-row">
                <div class="card">
+                  <a href="#" class="link"></a>
                   <img class="card-img" src="/images/cat1.jpg" alt="게시판 썸네일 이미지">
-                  <a href="#" class="card-title">예쁜 고양이</a>
+                  <span class="card-title">예쁜 강아지</span>
                </div>
                <div class="card">
+                  <a href="#" class="link"></a>
                   <img class="card-img" src="/images/cat2.jpg" alt="게시판 썸네일 이미지">
-                  <a href="#" class="card-title">귀여운 고양이</a>
+                  <span class="card-title">예쁜 강아지</span>
                </div>
                <div class="card">
+                  <a href="#" class="link"></a>
                   <img class="card-img" src="/images/cat3.jpg" alt="게시판 썸네일 이미지">
-                  <a href="#" class="card-title">누워있는 고양이</a>
+                  <span class="card-title">예쁜 강아지</span>
                </div>
                <div class="card">
+                    <a href="#" class="link"></a>
                   <img class="card-img" src="/images/cat1.jpg" alt="게시판 썸네일 이미지">
-                  <a href="#" class="card-title">집 가고싶은 고양이</a>
+                  <span class="card-title">예쁜 강아지</span>
                </div>
             </div>
          </div>
@@ -116,5 +124,9 @@
     </div>
     </main>
     <th:block th:replace="~{common/footer}"></th:block> 
+
+    <script src="/js/review/reviewList.js"></script>
+
+
 </body>
 </html>
