--- a/pawLife/src/main/resources/templates/member/signup.html
+++ b/pawLife/src/main/resources/templates/member/signup.html
@@ -93,32 +93,8 @@
 
         <span class="signUp-message" id="telMessage">전화번호를 입력해주세요.(- 제외)</span>
 
-    <!-- 
-        // 주소 입력 
-        <label for="memberAddress">
-          <span class="required">*</span> 
-          <span class="required">주소</span> 
-        </label>
 
-        <div class="signUp-input-area">
-          <input type="text" name="memberAddress" placeholder="우편번호" maxlength="6" id="postcode">                       
-          
-          <button type="button" id="searchAddress">검색</button>
-        </div>
-
-        <div class="signUp-input-area">
-          <input type="text" name="memberAddress" placeholder="도로명/지번 주소" id="address">
-        </div>
-
-        <div class="signUp-input-area">
-          <input type="text" name="memberAddress" placeholder="상세 주소" id="detailAddress">
-        </div>
-
-       
-         -->
-
-
-         <div>
+        <div>
           <button id="signUpBtn">가입하기</button>
         </div>
     </section>
@@ -133,11 +109,15 @@
        / 다 하나로 연결되어 다른 script의 코드 사용 가능 
       (단, 윗쪽 script에서 해석 안된 아랫쪽 script는 호출 불가 (해석 순서 문제))-->
 
-  <!-- 다음 주소 API 추가  -->
-  <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 
   <!-- 회원 가입 JS 추가 -->
   <script src="/js/member/signup.js"></script>
+
+  <script th:inline="javascript">
+    const message =  /*[[${message}]]*/ "전달 받은 message";
+  
+    if(message != null) alert(message);
+ </script>
 
 </body>
 </html>
