--- a/pawLife/src/main/resources/templates/review/reviewWrite.html
+++ b/pawLife/src/main/resources/templates/review/reviewWrite.html
@@ -10,13 +10,28 @@
 <body>
     <main>
         <th:block th:replace="~{common/header}"></th:block>
-        
-        <form action="/review/reviewWrite" method="POST" id="submitPost">
+
+        <form action="/review/reviewWrite" method="POST" id="submitPost"  enctype="multipart/form-data">
             <section class="board">
-                <h1><input type="text" placeholder="제목" name="reviewTitle" id="reviewTitle"></h1>
                 <section class="board-box">
 
-                    <textarea name="reviewContent" id="reviewContent" cols="100" rows="10" placeholder="내용을 입력해주세요."></textarea>
+                <!-- 에디터 -->
+                <h1><input type="text" placeholder="제목" name="reviewTitle" id="reviewTitle"></h1>
+                
+
+                <textarea name="reviewContent" id="reviewContent" cols="100" rows="10" placeholder="내용을 입력해주세요."></textarea>
+               
+                <!-- 이미지 -->
+                <div class="info-img">
+                    <label for="thumnail">
+                        <img class="preview" src="" id="preview">
+                    </label>
+                    <input type="file" class="review-img" id="thumnail" name="thumnailImg" accept="image/*">
+                    <span class="delete-image">&times;</span>
+                </div>
+                    
+                    
+                    
                     <button>글작성</button>
 
                 </section>
